--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,11 @@
     height: 100%;
     border: none;
 }
+
+.audio-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
